--- a/index.html
+++ b/index.html
@@ -1024,6 +1024,7 @@
     <script src="js/accessibility.js"></script>
     <script src="js/forms.js"></script>
     <!-- JavaScript para o botão -->
+
 <script>
     document.addEventListener("DOMContentLoaded", function () {
       const openBtn = document.getElementById("open-calendar");
@@ -1263,6 +1264,53 @@ document.addEventListener("DOMContentLoaded", function () {
 });
 </script>
   
+<script>
+  document.addEventListener("DOMContentLoaded", function () {
+    const volunteerForm = document.getElementById("volunteer-form");
+
+    volunteerForm.addEventListener("submit", async function (e) {
+      e.preventDefault();
+
+      const formData = {
+        "Nome Completo": document.getElementById("volunteer-name").value,
+        "Data de Nascimento": document.getElementById("volunteer-birth").value,
+        "CPF": document.getElementById("volunteer-cpf").value,
+        "RG": document.getElementById("volunteer-rg").value,
+        "Telefone/WhatsApp": document.getElementById("volunteer-phone").value,
+        "E-mail": document.getElementById("volunteer-email").value,
+        "Endereço Completo": document.getElementById("volunteer-address").value,
+        "Profissão/Ocupação": document.getElementById("volunteer-profession").value,
+        "Formação Acadêmica": document.getElementById("volunteer-education").value,
+        "Área de Interesse": document.getElementById("volunteer-area").value,
+        "Disponibilidade": document.getElementById("volunteer-availability").value,
+        "Experiência Prévia": document.getElementById("volunteer-experience").value,
+        "Motivação": document.getElementById("volunteer-motivation").value,
+        "Habilidades e Competências": document.getElementById("volunteer-skills").value,
+      };
+
+      try {
+        const response = await fetch("https://script.google.com/macros/s/AKfycbxZdFGM6_csw3sVE98e0As-KMMbQOiDfbAEBP-OSa_FVspF4RaX80LbZnUlgWjEbClO/exec", {
+  method: "POST",
+  headers: { "Content-Type": "application/json" }, // ✅ correto
+  body: JSON.stringify(formData),
+});
+
+
+        const result = await response.json();
+        if (result.status === "success") {
+          alert("Cadastro de voluntário enviado com sucesso!");
+          volunteerForm.reset();
+          document.getElementById("volunteer-form-overlay").style.display = "none";
+        } else {
+          alert("Erro ao enviar. Tente novamente.");
+        }
+      } catch (error) {
+        console.error("Erro no envio:", error);
+        alert("Erro ao enviar. Tente novamente.");
+      }
+    });
+  });
+</script>
 
 
 </body>
